# DevCenter

./: .gitignore  BUGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORTFORMAT.md  PORTIERUNGSPLAN.md  PRIVACY_POLICY.md  README.md  SECURITY.md  SUITE_DEVCENTER_TEMPLATE.md  SUITE_ENTWICKLER_Fusionskonzept.md  build_exe.bat  llms.txt  manage_translations.py  pyproject.toml  requirements.txt  translator.py
.github/workflows/: tests.yml
_sources/: CROSSCHECK.md
resources/WinStorePackager/: WindowsStorePublisher_3.py  settings_store_packager.json
src/: __init__.py
src/core/: __init__.py  app_paths.py  event_bus.py  project_manager.py  settings_manager.py  workspace_export.py
src/gui/: main_window.py
src/gui/dialogs/: build_dialog.py  new_project_dialog.py  settings_dialog.py
src/gui/panels/: ai_panel.py  explorer_panel.py  output_panel.py  problems_panel.py
src/modules/ai_assistant/: ai_service.py
src/modules/analyzer/: encoding_fixer.py  method_analyzer.py
src/modules/builder/: icon_builder.py  kompilator.py  license_generator.py
tests/: linux_platform_smoke.py  test_ai_panel_model_selection.py  test_bug_regressions_20260623.py  test_bug_regressions_20260627.py  test_bugsweep_regressions.py  test_core.py  test_explorer_panel_accessibility.py  test_profiler_bridge.py  test_settings_application.py  test_workspace_export.py
web_companion/: README.md  app.js  index.html  library.js  manifest.webmanifest  package.json  styles.css  sw.js
web_companion/fixtures/: demo-workspace.json
web_companion/tests/: library.test.mjs  pwa.test.mjs
(+3 files in other folders)
