[project]
name = "devcenter-suite"
version = "1.0.0"
description = "Entwickler-Zentrale: Build, Analyse, Sync und AI-Assistent"
authors = [{ name = "Lukas Geiger", email = "lukasgeiger@googlemail.com" }]
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "PySide6>=6.5.0,<7.0.0",
    "pyinstaller>=5.0.0,<7.0.0",
    "Pillow>=12.2.0,<13.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "keyring>=23.0.0,<26.0.0",
    "chardet>=5.0.0,<6.0.0",
    "ftfy>=6.1.0,<7.0.0",
    "pip-licenses>=4.0.0,<5.0.0",
    "watchdog>=3.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
